# -Pipeline-de-Qualit-Python

./: README.md
mon_projet/: .flake8  .pre-commit-config.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements copy.txt  requirements-dev.txt
mon_projet/.github/workflows/: cd.yml  ci.yml  release.yml
mon_projet/.pytest_cache/v/cache/: nodeids
mon_projet/scripts/: build_docs.py  check_requirements.py  deploy.sh  dev-workflow.sh  run-tests.sh  setup-dev-env.sh
mon_projet/src/: calculator.py
mon_projet/tests/: test_calculator.py
